Updated allowed origins approach
Updated allowed origins approach